5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1649_2447.log
== TEST (2019-04-09 18:07:11) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digiteas lagrimas: "))
y = pagamento - preço
x = preço - pagamento
if preço > pagamento:
	print(round("falta" x, 2))
else:
	print((round("y", 2))
	
-- ERROR:
File "XXXX", line 6
    print(round("falta" x, 2))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:07:20) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digiteas lagrimas: "))
y = pagamento - preço
x = preço - pagamento
if preço > pagamento:
	print(round("falta" + x, 2))
else:
	print((round("y", 2))
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:07:24) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digiteas lagrimas: "))
y = pagamento - preço
x = preço - pagamento
if preço > pagamento:
	print(round("falta" + x, 2))
else:
	print((round("y", 2))
-- ERROR:
File "XXXX", line 9
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:07:28) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digiteas lagrimas: "))
y = pagamento - preço
x = preço - pagamento
if preço > pagamento:
	print(round("falta" + x, 2))
else:
	print((round("y", 2))
-- ERROR:
File "XXXX", line 9
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:07:34) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digiteas lagrimas: "))
y = pagamento - preço
x = preço - pagamento
if preço > pagamento:
	print(round("falta" + x, 2))
else:
	print(round("y", 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("falta" + x, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:07:57) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digiteas lagrimas: "))
y = pagamento - preço
x = preço - pagamento
if preço > pagamento:
	print(round("Falta" + x, 2))
else:
	print(round("Troco de" + y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("Falta" + x, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:08:06) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
y = pagamento - preço
x = preço - pagamento
if preço > pagamento:
	print(round("Falta" + x, 2))
else:
	print(round("Troco de" + y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("Falta" + x, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:08:37) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
y = pagamento - preço
x = preço - pagamento
if preço > pagamento:
	print(round("Falta" + x, 2))
else:
	print(round("Troco de" + y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("Falta" + x, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:09:39) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
y = pagamento - preço
x = preço - pagamento
if preço > pagamento:
	print(round("Falta" + x, 2))
else:
	round(y, 2)
	print("Troco de" + y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("Falta" + x, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:09:59) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
x = preço - pagamento
y = pagamento - preço
if preço > pagamento:
	print(round("Falta" + x, 2))
else:
	round(y, 2)
	print("Troco de" + y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("Falta" + x, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:10:09) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
x = preço - pagamento
y = pagamento - preço
if preço > pagamento:
	print(round("Falta" + x, 2))
else:
	round(y, 2)
	print("Troco de" + y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("Falta" + x, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:11:44) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
x = preço - pagamento
y = pagamento - preço
if preço > pagamento:
	print(round("Falta" + x, 2))
else:
	print("Troco de" + y , round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("Falta" + x, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:14:10) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
x = preço - pagamento
y = pagamento - preço
if preço > pagamento:
	print(round("Falta" + x, 2))
else:
	a = "Troco de"
	b = y
	print(a, round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("Falta" + x, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:14:15) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
x = preço - pagamento
y = pagamento - preço
if preço > pagamento:
	print(round("Falta" + x, 2))
else:
	a = "Troco de"
	b = y
	print(a, round(b, 2))
-- EXECUTION TIME:
0.157193
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 6, in <module>
    print(round("Falta" + x, 2))
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:15:06) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
x = preço - pagamento
y = pagamento - preço
if preço > pagamento:
	c ="Falta"
	d = x
	print(a, round(d, 2))
else:
	a = "Troco de"
	b = y
	print(a, round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(a, round(d, 2))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:15:11) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
x = preço - pagamento
y = pagamento - preço
if preço > pagamento:
	c ="Falta"
	d = x
	print(a, round(d, 2))
else:
	a = "Troco de"
	b = y
	print(a, round(b, 2))
-- EXECUTION TIME:
0.142251
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 8, in <module>
    print(a, round(d, 2))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:15:12) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
x = preço - pagamento
y = pagamento - preço
if preço > pagamento:
	c ="Falta"
	d = x
	print(a, round(d, 2))
else:
	a = "Troco de"
	b = y
	print(a, round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(a, round(d, 2))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:15:35) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
x = preço - pagamento
y = pagamento - preço
if preço > pagamento:
	c = "Falta"
	d = x
	print(a, round(d, 2))
else:
	a = "Troco de"
	b = y
	print(a, round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(a, round(d, 2))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:15:53) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
x = preço - pagamento
y = pagamento - preço
if preço > pagamento:
	c = "Falta"
	d = x
	print(c, round(d, 2))
else:
	a = "Troco de"
	b = y
	print(a, round(b, 2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:15:58) 
-- CODE:
preço = float(input("digite o golpe: "))
pagamento = float(input("digite as lagrimas: "))
x = preço - pagamento
y = pagamento - preço
if preço > pagamento:
	c = "Falta"
	d = x
	print(c, round(d, 2))
else:
	a = "Troco de"
	b = y
	print(a, round(b, 2))
-- EXECUTION TIME:
0.160594
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
